--- a/MDT/css/style.css
+++ b/MDT/css/style.css
@@ -25,7 +25,7 @@
     --gray-200: #e2e8f0;
     --gray-300: #cbd5e1;
     --gray-600: #475569;
-    --gray-800: #1e293b;
+    --gray-800: #ffffff;
 }
 
 body {
@@ -985,7 +985,7 @@ body {
 }
 
 .hotspot-dutoviario {
-    top: 75%;
+    top: 80%;
     left: 90%;
     background-color: var(--dutoviario);
 }
